--- a/app/src/main/res/layout/content_form_maternity_aset.xml
+++ b/app/src/main/res/layout/content_form_maternity_aset.xml
@@ -111,7 +111,7 @@
                             android:ems="10"
                             android:hint="Nama"
                             android:imeOptions="actionNext"
-                            android:inputType="text"
+                            android:inputType="text|textCapWords"
                             android:padding="@dimen/min_padding"
                             android:text="" />
                     </LinearLayout>
@@ -140,7 +140,7 @@
                             android:ems="10"
                             android:hint="Brand"
                             android:imeOptions="actionNext"
-                            android:inputType="text"
+                            android:inputType="text|textCapWords"
                             android:padding="@dimen/min_padding"
                             android:text="" />
                     </LinearLayout>
@@ -168,7 +168,7 @@
                             android:ems="10"
                             android:hint="Tipe"
                             android:imeOptions="actionNext"
-                            android:inputType="text"
+                            android:inputType="text|textCapWords"
                             android:padding="@dimen/min_padding"
                             android:text="" />
                     </LinearLayout>
@@ -234,11 +234,11 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="Hari"
+                                android:hint="0"
                                 android:imeOptions="actionNext"
                                 android:inputType="number"
                                 android:padding="@dimen/min_padding"
-                                android:text="0" />
+                                android:text="" />
 
                             <TextView
                                 android:id="@+id/day"
@@ -282,7 +282,7 @@
                                 android:layout_weight="1"
                                 android:checked="false"
                                 android:paddingEnd="@dimen/min_padding"
-                                android:text="Delivery" />
+                                android:text="Dikirim" />
 
                             <CheckBox
                                 android:id="@+id/as_ck_pickup"
@@ -292,7 +292,7 @@
                                 android:layout_weight="1"
                                 android:checked="false"
                                 android:paddingEnd="@dimen/min_padding"
-                                android:text="Pickup" />
+                                android:text="Dijemput" />
 
                         </LinearLayout>
 
@@ -318,29 +318,29 @@
                             android:text="Asuransi" />
 
 
-                        <EditText
-                            android:id="@+id/as_assurance_price"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@id/as_ck_assurance"
-                            android:background="@color/colorNearWhite"
-                            android:ems="10"
-                            android:hint="Nominal"
-                            android:imeOptions="actionNext"
-                            android:inputType="number"
-                            android:padding="@dimen/min_padding"
-                            android:text="0" />
+                        <!--<EditText-->
+                        <!--android:id="@+id/as_assurance_price"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:background="@color/colorNearWhite"-->
+                        <!--android:layout_toEndOf="@id/as_ck_assurance"-->
+                        <!--android:ems="10"-->
+                        <!--android:hint="Nominal"-->
+                        <!--android:padding="@dimen/min_padding"-->
+                        <!--android:imeOptions="actionNext"-->
+                        <!--android:inputType="number"-->
+                        <!--android:text="0" />-->
 
-                        <TextView
-                            android:id="@+id/idr"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginEnd="@dimen/min_padding"
-                            android:text="IDR"
-                            android:textColor="@color/colorBlack54"
-                            android:textSize="@dimen/medium_text" />
+                        <!--<TextView-->
+                        <!--android:id="@+id/idr"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="IDR"-->
+                        <!--android:layout_alignParentEnd="true"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:textColor="@color/colorBlack54"-->
+                        <!--android:layout_marginEnd="@dimen/min_padding"-->
+                        <!--android:textSize="@dimen/medium_text" />-->
 
                     </RelativeLayout>
 
@@ -367,7 +367,7 @@
                             android:ems="10"
                             android:gravity="start"
                             android:hint="Keterangan"
-                            android:inputType="textMultiLine"
+                            android:inputType="textMultiLine|textCapSentences"
                             android:lines="3"
                             android:padding="@dimen/min_padding"
                             android:text="Sekilas Tentang Aset" />
@@ -379,7 +379,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/xmin_padding">
 
                 <LinearLayout
@@ -393,6 +393,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/xmin_padding"
                         android:background="@color/colorPrimary"
                         android:padding="@dimen/min_padding">
 
@@ -428,16 +429,16 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <EditText
+                            <com.aldoapps.autoformatedittext.AutoFormatEditText
                                 android:id="@+id/as_price_basic"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="Harga"
-                                android:inputType="number"
+                                android:hint="0"
+                                android:maxLength="12"
                                 android:padding="@dimen/min_padding"
-                                android:text="" />
+                                app:isDecimal="false" />
 
                             <TextView
                                 android:id="@+id/idra"
@@ -449,7 +450,32 @@
                                 android:text="IDR"
                                 android:textColor="@color/colorGrey"
                                 android:textSize="@dimen/medium_text" />
+                        </RelativeLayout>
 
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:id="@+id/disptext"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/small_space"
+                                android:text="Harga yang ditampilkan (+20%):"
+                                android:textColor="@color/colorGrey"
+                                android:textSize="@dimen/almost_tiny_text" />
+
+                            <TextView
+                                android:id="@+id/as_price_basic_disp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginTop="@dimen/small_space"
+                                android:layout_toEndOf="@+id/disptext"
+                                android:text="0 IDR"
+                                android:textAlignment="textEnd"
+                                android:textColor="@color/colorPrice"
+                                android:textSize="@dimen/under_small_text" />
                         </RelativeLayout>
 
                     </LinearLayout>
@@ -472,7 +498,7 @@
                                 android:id="@+id/textView12w"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Range Name"
+                                android:text="Nama Periode"
                                 android:textColor="@color/colorBlack"
                                 android:textSize="12sp" />
 
@@ -482,10 +508,10 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="Nama"
-                                android:inputType="textPersonName"
+                                android:hint="Nama Periode"
+                                android:inputType="textPersonName|textCapWords"
                                 android:padding="@dimen/min_padding"
-                                android:text="High Season" />
+                                android:text="" />
 
                         </LinearLayout>
 
@@ -509,11 +535,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
+                                android:drawableEnd="@drawable/ic_date_range_black_24dp"
+                                android:editable="false"
                                 android:ems="10"
-                                android:hint="Start Date"
-                                android:inputType="number"
+                                android:hint="Tanggal Mulai"
+                                android:clickable="true"
+                                android:inputType="date|none"
                                 android:padding="@dimen/min_padding"
-                                android:text="2017-10-09" />
+                                android:text="" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -536,11 +565,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
+                                android:drawableEnd="@drawable/ic_date_range_black_24dp"
+                                android:editable="false"
                                 android:ems="10"
-                                android:hint="End Date"
-                                android:inputType="number"
+                                android:clickable="true"
+                                android:hint="Tanggal Akhir"
+                                android:inputType="date|none"
                                 android:padding="@dimen/min_padding"
-                                android:text="2017-12-09" />
+                                android:text="" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -562,16 +594,17 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
-                                <EditText
+
+                                <com.aldoapps.autoformatedittext.AutoFormatEditText
                                     android:id="@+id/as_price_advance"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:background="@color/colorNearWhite"
                                     android:ems="10"
-                                    android:hint="Harga"
-                                    android:inputType="number"
+                                    android:hint="0"
+                                    android:maxLength="12"
                                     android:padding="@dimen/min_padding"
-                                    android:text="" />
+                                    app:isDecimal="false" />
 
                                 <TextView
                                     android:id="@+id/daye"
@@ -584,6 +617,32 @@
                                     android:textColor="@color/colorGrey"
                                     android:textSize="@dimen/medium_text" />
 
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/disptext2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="@dimen/small_space"
+                                    android:text="Harga yang ditampilkan (+20%):"
+                                    android:textColor="@color/colorGrey"
+                                    android:textSize="@dimen/almost_tiny_text" />
+
+                                <TextView
+                                    android:id="@+id/as_price_advance_disp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginTop="@dimen/small_space"
+                                    android:layout_toEndOf="@+id/disptext2"
+                                    android:text="0 IDR"
+                                    android:textAlignment="textEnd"
+                                    android:textColor="@color/colorPrice"
+                                    android:textSize="@dimen/under_small_text" />
                             </RelativeLayout>
                         </LinearLayout>
 
@@ -598,6 +657,7 @@
                         android:text="+ Tambah Harga Advance"
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/small_text" />
+
 
                 </LinearLayout>
 
